kubernetes/apps/media/jellyseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 1.1.1.1
        options:
          - name: ndots
            value: "1"
      containers:
        - name: jellyseerr
          image: ghcr.io/fallenbagel/jellyseerr:latest
          ports:
            - containerPort: 5055
              name: http
          volumeMounts:
            - name: config
              mountPath: /app/config

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-pvc
